--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -33,24 +33,11 @@ jobs:
     steps:
       - name: Check-out repository
         uses: actions/checkout@v3
-
-      - name: Ubuntu specific
-        if: matrix.os == 'ubuntu-latest'
-        run: |
-          sudo apt-get update
-          sudo apt-get install libasound-dev portaudio19-dev libportaudio2 libportaudiocpp0
-          sudo apt-get install ffmpeg
-
-      - name: MacOS specific
-        if: matrix.os == 'macos-latest'
-        run: |
-          brew update
-          brew install portaudio
-          
+         
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.8' # Version range or exact version of a Python version to use, using SemVer's version range syntax
+          python-version: '3.10' # Version range or exact version of a Python version to use, using SemVer's version range syntax
           architecture: 'x64' # optional x64 or x86. Defaults to x64 if not specified
           cache: 'pip'
           cache-dependency-path: |
@@ -64,22 +51,20 @@ jobs:
         uses: Nuitka/Nuitka-Action@v1.0
         with:
           nuitka-version: main
-          script-name: main.py
+          script-name: multicast_msg.py
           company-name: zak-45
           file-version: ${{github.event.inputs.mytag}}
           windows-icon-from-ico: assets/WLEDAudioSync30.ico
           macos-app-icon: assets/WLEDAudioSync30.ico
           onefile: true
-          onefile-tempdir-spec: ./WLEDAudioSyncRTMood
-          include-data-dir: assets=assets
-          output-file: WLEDAudioSyncRTMood-${{runner.os}}
+          output-file: WLEDAudioSyncRTMCast-${{runner.os}}
 
       - name: Upload Artifacts
         uses: actions/upload-artifact@v3
         with:
           name: ${{runner.os}} Build
           if-no-files-found: warn
-          path: 'build/WLEDAudioSyncRTMood-${{runner.os}}**'
+          path: 'build/WLEDAudioSyncRTMCast-${{runner.os}}**'
             
       - name: Create Release ${{github.event.inputs.mytag}} with Builds from Nuitka
         uses: ncipollo/release-action@v1
@@ -87,5 +72,5 @@ jobs:
           allowUpdates: true
           commit: main
           tag: ${{github.event.inputs.mytag}}
-          artifacts: 'build/WLEDAudioSyncRTMood-${{runner.os}}**'
+          artifacts: 'build/WLEDAudioSyncRTMCast-${{runner.os}}**'
           
