--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -57,6 +57,7 @@ jobs:
           windows-icon-from-ico: assets/WLEDAudioSync30.ico
           macos-app-icon: assets/WLEDAudioSync30.ico
           onefile: true
+          onefile-tempdir-spec: ./WLEDAudioSyncMCast
           output-file: WLEDAudioSyncMCast-${{runner.os}}
 
       - name: Upload Artifacts
